export interface ReviewDTO {
    username: string
    charger_id: number
    date: number
    content: string
    rate: number
}